--- a/test-output/old/Opencart App Test Regression Suite/methods.html
+++ b/test-output/old/Opencart App Test Regression Suite/methods.html
@@ -1,64 +1,64 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Opencart App Test Regression Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d6bfcf">  <td>25/05/23 16:24:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageTitleTest()[pri:0, instance:com.qa.opencart.tests.LoginPageTest@47c96f2c]">loginPageTitleTest</td> 
-  <td>TestNG-tests-1@1962688455</td>   <td></td> </tr>
-<tr bgcolor="6394b3">  <td>25/05/23 16:24:36</td>   <td>93</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.attachScreenshot(org.testng.ITestResult)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@47c96f2c]">&lt;&lt;attachScreenshot</td> 
+<tr bgcolor="c47b77">  <td>25/05/23 16:38:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.attachScreenshot(org.testng.ITestResult)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@60816371]">&lt;&lt;attachScreenshot</td> 
 <td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="d6bfcf">  <td>25/05/23 16:24:36</td>   <td>37</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageURLTest()[pri:0, instance:com.qa.opencart.tests.LoginPageTest@47c96f2c]">loginPageURLTest</td> 
-  <td>TestNG-tests-1@1962688455</td>   <td></td> </tr>
-<tr bgcolor="6394b3">  <td>25/05/23 16:24:36</td>   <td>93</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.attachScreenshot(org.testng.ITestResult)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@47c96f2c]">&lt;&lt;attachScreenshot</td> 
+<tr bgcolor="c47b77">  <td>25/05/23 16:38:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.attachScreenshot(org.testng.ITestResult)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@60816371]">&lt;&lt;attachScreenshot</td> 
 <td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="d6bfcf">  <td>25/05/23 16:24:36</td>   <td>72</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.doLoginTest()[pri:32767, instance:com.qa.opencart.tests.LoginPageTest@47c96f2c]">doLoginTest</td> 
-  <td>TestNG-tests-1@1962688455</td>   <td></td> </tr>
-<tr bgcolor="6394b3">  <td>25/05/23 16:24:36</td>   <td>110</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.qa.opencart.tests.LoginPageTest@47c96f2c]">&lt;&lt;tearDown</td> 
+<tr bgcolor="c47b77">  <td>25/05/23 16:38:58</td>   <td>8</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.qa.opencart.tests.LoginPageTest@60816371]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="6394b3">  <td>25/05/23 16:24:36</td>   <td>93</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.attachScreenshot(org.testng.ITestResult)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@47c96f2c]">&lt;&lt;attachScreenshot</td> 
+<tr bgcolor="c47b77">  <td>25/05/23 16:38:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.attachScreenshot(org.testng.ITestResult)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@60816371]">&lt;&lt;attachScreenshot</td> 
 <td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="d6bfcf">  <td>25/05/23 16:24:36</td>   <td>-65</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.forgotPasswordLinkExistTest()[pri:0, instance:com.qa.opencart.tests.LoginPageTest@47c96f2c]">forgotPasswordLinkExistTest</td> 
-  <td>TestNG-tests-1@1962688455</td>   <td></td> </tr>
-<tr bgcolor="6394b3">  <td>25/05/23 16:24:36</td>   <td>-439</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup(java.lang.String)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@47c96f2c]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1962688455</td>   <td></td> </tr>
-<tr bgcolor="6394b3">  <td>25/05/23 16:24:36</td>   <td>93</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.attachScreenshot(org.testng.ITestResult)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@47c96f2c]">&lt;&lt;attachScreenshot</td> 
+<tr bgcolor="a67293">  <td>25/05/23 16:38:57</td>   <td>-128</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageTitleTest()[pri:0, instance:com.qa.opencart.tests.LoginPageTest@60816371]">loginPageTitleTest</td> 
+  <td>TestNG-tests-1@1408538096</td>   <td></td> </tr>
+<tr bgcolor="a67293">  <td>25/05/23 16:38:58</td>   <td>-18</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.doLoginTest()[pri:32767, instance:com.qa.opencart.tests.LoginPageTest@60816371]">doLoginTest</td> 
+  <td>TestNG-tests-1@1408538096</td>   <td></td> </tr>
+<tr bgcolor="c47b77">  <td>25/05/23 16:38:57</td>   <td>-715</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup(java.lang.String)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@60816371]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1408538096</td>   <td></td> </tr>
+<tr bgcolor="a67293">  <td>25/05/23 16:38:57</td>   <td>-220</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.forgotPasswordLinkExistTest()[pri:0, instance:com.qa.opencart.tests.LoginPageTest@60816371]">forgotPasswordLinkExistTest</td> 
+  <td>TestNG-tests-1@1408538096</td>   <td></td> </tr>
+<tr bgcolor="a67293">  <td>25/05/23 16:38:58</td>   <td>-55</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageURLTest()[pri:0, instance:com.qa.opencart.tests.LoginPageTest@60816371]">loginPageURLTest</td> 
+  <td>TestNG-tests-1@1408538096</td>   <td></td> </tr>
+<tr bgcolor="c47b77">  <td>25/05/23 16:38:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.attachScreenshot(org.testng.ITestResult)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@60816371]">&lt;&lt;attachScreenshot</td> 
 <td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="6394b3">  <td>25/05/23 16:24:36</td>   <td>-439</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup(java.lang.String)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@34beadce]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@524323510</td>   <td></td> </tr>
-<tr bgcolor="6394b3">  <td>25/05/23 16:24:36</td>   <td>69</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.attachScreenshot(org.testng.ITestResult)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@34beadce]">&lt;&lt;attachScreenshot</td> 
+<tr bgcolor="c47b77">  <td>25/05/23 16:38:58</td>   <td>19</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.attachScreenshot(org.testng.ITestResult)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@6ce2e079]">&lt;&lt;attachScreenshot</td> 
 <td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="d6bfcf">  <td>25/05/23 16:24:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageTitleTest()[pri:0, instance:com.qa.opencart.tests.LoginPageTest@34beadce]">loginPageTitleTest</td> 
-  <td>TestNG-tests-2@524323510</td>   <td></td> </tr>
-<tr bgcolor="6394b3">  <td>25/05/23 16:24:36</td>   <td>69</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.attachScreenshot(org.testng.ITestResult)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@34beadce]">&lt;&lt;attachScreenshot</td> 
-<td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="d6bfcf">  <td>25/05/23 16:24:36</td>   <td>54</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.doLoginTest()[pri:32767, instance:com.qa.opencart.tests.LoginPageTest@34beadce]">doLoginTest</td> 
-  <td>TestNG-tests-2@524323510</td>   <td></td> </tr>
-<tr bgcolor="6394b3">  <td>25/05/23 16:24:36</td>   <td>82</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.qa.opencart.tests.LoginPageTest@34beadce]">&lt;&lt;tearDown</td> 
+<tr bgcolor="c47b77">  <td>25/05/23 16:38:58</td>   <td>26</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.qa.opencart.tests.LoginPageTest@6ce2e079]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="6394b3">  <td>25/05/23 16:24:36</td>   <td>69</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.attachScreenshot(org.testng.ITestResult)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@34beadce]">&lt;&lt;attachScreenshot</td> 
+<tr bgcolor="a67293">  <td>25/05/23 16:38:57</td>   <td>-220</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.forgotPasswordLinkExistTest()[pri:0, instance:com.qa.opencart.tests.LoginPageTest@6ce2e079]">forgotPasswordLinkExistTest</td> 
+  <td>TestNG-tests-2@1165000566</td>   <td></td> </tr>
+<tr bgcolor="c47b77">  <td>25/05/23 16:38:57</td>   <td>-715</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup(java.lang.String)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@6ce2e079]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@1165000566</td>   <td></td> </tr>
+<tr bgcolor="c47b77">  <td>25/05/23 16:38:58</td>   <td>19</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.attachScreenshot(org.testng.ITestResult)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@6ce2e079]">&lt;&lt;attachScreenshot</td> 
 <td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="d6bfcf">  <td>25/05/23 16:24:36</td>   <td>-65</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.forgotPasswordLinkExistTest()[pri:0, instance:com.qa.opencart.tests.LoginPageTest@34beadce]">forgotPasswordLinkExistTest</td> 
-  <td>TestNG-tests-2@524323510</td>   <td></td> </tr>
-<tr bgcolor="6394b3">  <td>25/05/23 16:24:36</td>   <td>69</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.attachScreenshot(org.testng.ITestResult)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@34beadce]">&lt;&lt;attachScreenshot</td> 
+<tr bgcolor="a67293">  <td>25/05/23 16:38:58</td>   <td>-62</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageURLTest()[pri:0, instance:com.qa.opencart.tests.LoginPageTest@6ce2e079]">loginPageURLTest</td> 
+  <td>TestNG-tests-2@1165000566</td>   <td></td> </tr>
+<tr bgcolor="a67293">  <td>25/05/23 16:38:57</td>   <td>-134</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageTitleTest()[pri:0, instance:com.qa.opencart.tests.LoginPageTest@6ce2e079]">loginPageTitleTest</td> 
+  <td>TestNG-tests-2@1165000566</td>   <td></td> </tr>
+<tr bgcolor="a67293">  <td>25/05/23 16:38:58</td>   <td>-9</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.doLoginTest()[pri:32767, instance:com.qa.opencart.tests.LoginPageTest@6ce2e079]">doLoginTest</td> 
+  <td>TestNG-tests-2@1165000566</td>   <td></td> </tr>
+<tr bgcolor="c47b77">  <td>25/05/23 16:38:58</td>   <td>19</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.attachScreenshot(org.testng.ITestResult)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@6ce2e079]">&lt;&lt;attachScreenshot</td> 
 <td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="d6bfcf">  <td>25/05/23 16:24:36</td>   <td>26</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageURLTest()[pri:0, instance:com.qa.opencart.tests.LoginPageTest@34beadce]">loginPageURLTest</td> 
-  <td>TestNG-tests-2@524323510</td>   <td></td> </tr>
-<tr bgcolor="d6bfcf">  <td>25/05/23 16:24:36</td>   <td>-65</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.forgotPasswordLinkExistTest()[pri:0, instance:com.qa.opencart.tests.LoginPageTest@2d73e8c4]">forgotPasswordLinkExistTest</td> 
-  <td>TestNG-tests-3@1408538096</td>   <td></td> </tr>
-<tr bgcolor="d6bfcf">  <td>25/05/23 16:24:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageTitleTest()[pri:0, instance:com.qa.opencart.tests.LoginPageTest@2d73e8c4]">loginPageTitleTest</td> 
-  <td>TestNG-tests-3@1408538096</td>   <td></td> </tr>
-<tr bgcolor="d6bfcf">  <td>25/05/23 16:24:36</td>   <td>23</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageURLTest()[pri:0, instance:com.qa.opencart.tests.LoginPageTest@2d73e8c4]">loginPageURLTest</td> 
-  <td>TestNG-tests-3@1408538096</td>   <td></td> </tr>
-<tr bgcolor="6394b3">  <td>25/05/23 16:24:36</td>   <td>73</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.attachScreenshot(org.testng.ITestResult)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@2d73e8c4]">&lt;&lt;attachScreenshot</td> 
+<tr bgcolor="c47b77">  <td>25/05/23 16:38:58</td>   <td>19</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.attachScreenshot(org.testng.ITestResult)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@6ce2e079]">&lt;&lt;attachScreenshot</td> 
 <td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="d6bfcf">  <td>25/05/23 16:24:36</td>   <td>53</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.doLoginTest()[pri:32767, instance:com.qa.opencart.tests.LoginPageTest@2d73e8c4]">doLoginTest</td> 
-  <td>TestNG-tests-3@1408538096</td>   <td></td> </tr>
-<tr bgcolor="6394b3">  <td>25/05/23 16:24:36</td>   <td>73</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.attachScreenshot(org.testng.ITestResult)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@2d73e8c4]">&lt;&lt;attachScreenshot</td> 
+<tr bgcolor="c47b77">  <td>25/05/23 16:38:58</td>   <td>-4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.attachScreenshot(org.testng.ITestResult)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@148ab138]">&lt;&lt;attachScreenshot</td> 
 <td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="6394b3">  <td>25/05/23 16:24:36</td>   <td>73</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.attachScreenshot(org.testng.ITestResult)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@2d73e8c4]">&lt;&lt;attachScreenshot</td> 
+<tr bgcolor="c47b77">  <td>25/05/23 16:38:58</td>   <td>-4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.attachScreenshot(org.testng.ITestResult)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@148ab138]">&lt;&lt;attachScreenshot</td> 
 <td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="6394b3">  <td>25/05/23 16:24:36</td>   <td>73</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.attachScreenshot(org.testng.ITestResult)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@2d73e8c4]">&lt;&lt;attachScreenshot</td> 
+<tr bgcolor="c47b77">  <td>25/05/23 16:38:58</td>   <td>-4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.attachScreenshot(org.testng.ITestResult)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@148ab138]">&lt;&lt;attachScreenshot</td> 
 <td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="6394b3">  <td>25/05/23 16:24:36</td>   <td>95</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.qa.opencart.tests.LoginPageTest@2d73e8c4]">&lt;&lt;tearDown</td> 
+<tr bgcolor="c47b77">  <td>25/05/23 16:38:58</td>   <td>8</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.qa.opencart.tests.LoginPageTest@148ab138]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="6394b3">  <td>25/05/23 16:24:36</td>   <td>-439</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup(java.lang.String)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@2d73e8c4]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-3@1408538096</td>   <td></td> </tr>
+<tr bgcolor="c47b77">  <td>25/05/23 16:38:58</td>   <td>-4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.attachScreenshot(org.testng.ITestResult)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@148ab138]">&lt;&lt;attachScreenshot</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="a67293">  <td>25/05/23 16:38:57</td>   <td>-134</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageTitleTest()[pri:0, instance:com.qa.opencart.tests.LoginPageTest@148ab138]">loginPageTitleTest</td> 
+  <td>TestNG-tests-3@1747085016</td>   <td></td> </tr>
+<tr bgcolor="a67293">  <td>25/05/23 16:38:57</td>   <td>-220</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.forgotPasswordLinkExistTest()[pri:0, instance:com.qa.opencart.tests.LoginPageTest@148ab138]">forgotPasswordLinkExistTest</td> 
+  <td>TestNG-tests-3@1747085016</td>   <td></td> </tr>
+<tr bgcolor="a67293">  <td>25/05/23 16:38:58</td>   <td>-27</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.doLoginTest()[pri:32767, instance:com.qa.opencart.tests.LoginPageTest@148ab138]">doLoginTest</td> 
+  <td>TestNG-tests-3@1747085016</td>   <td></td> </tr>
+<tr bgcolor="c47b77">  <td>25/05/23 16:38:57</td>   <td>-716</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup(java.lang.String)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@148ab138]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-3@1747085016</td>   <td></td> </tr>
+<tr bgcolor="a67293">  <td>25/05/23 16:38:58</td>   <td>-67</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageURLTest()[pri:0, instance:com.qa.opencart.tests.LoginPageTest@148ab138]">loginPageURLTest</td> 
+  <td>TestNG-tests-3@1747085016</td>   <td></td> </tr>
 </table>
