--- a/test-output/old/Opencart App Test Regression Suite/toc.html
+++ b/test-output/old/Opencart App Test Regression Suite/toc.html
@@ -20,25 +20,25 @@
 <td><a target='mainFrame' href='reporter-output.html'>reporter output</a></td>
 <td><a target='mainFrame' href='testng.xml.html'>testng.xml</a></td>
 </tr></table>
-<table width='100%' class='test-skipped'>
+<table width='100%' class='test-passed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>Login Page Test_chrome (0/0/4)</td><td valign='top' align='right'>
+<table style='width: 100%'><tr><td valign='top'>Login Page Test_chrome (4/0/0)</td><td valign='top' align='right'>
   <a href='Login Page Test_chrome.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
 
-<table width='100%' class='test-skipped'>
+<table width='100%' class='test-passed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>Login Page Test_edge (0/0/4)</td><td valign='top' align='right'>
+<table style='width: 100%'><tr><td valign='top'>Login Page Test_edge (4/0/0)</td><td valign='top' align='right'>
   <a href='Login Page Test_edge.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
 
-<table width='100%' class='test-skipped'>
+<table width='100%' class='test-passed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>Login Page Test_firefox (0/0/4)</td><td valign='top' align='right'>
+<table style='width: 100%'><tr><td valign='top'>Login Page Test_firefox (4/0/0)</td><td valign='top' align='right'>
   <a href='Login Page Test_firefox.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
