--- a/test-output/old/Opencart App Test Regression Suite/methods-alphabetical.html
+++ b/test-output/old/Opencart App Test Regression Suite/methods-alphabetical.html
@@ -1,64 +1,44 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Opencart App Test Regression Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7ebe67">  <td>25/06/02 10:41:05</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.attachScreenshot(org.testng.ITestResult)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@678586f0]">&lt;&lt;attachScreenshot</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1593727781</td>   <td></td> </tr>
-<tr bgcolor="7ebe67">  <td>25/06/02 10:41:05</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.attachScreenshot(org.testng.ITestResult)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@678586f0]">&lt;&lt;attachScreenshot</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1593727781</td>   <td></td> </tr>
-<tr bgcolor="7ebe67">  <td>25/06/02 10:41:05</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.attachScreenshot(org.testng.ITestResult)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@678586f0]">&lt;&lt;attachScreenshot</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1593727781</td>   <td></td> </tr>
-<tr bgcolor="7ebe67">  <td>25/06/02 10:41:05</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.attachScreenshot(org.testng.ITestResult)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@678586f0]">&lt;&lt;attachScreenshot</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1593727781</td>   <td></td> </tr>
-<tr bgcolor="7ebe67">  <td>25/06/02 10:41:07</td>   <td>1897</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.attachScreenshot(org.testng.ITestResult)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@3e39e0fb]">&lt;&lt;attachScreenshot</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-2@521022428</td>   <td></td> </tr>
-<tr bgcolor="7ebe67">  <td>25/06/02 10:41:07</td>   <td>1897</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.attachScreenshot(org.testng.ITestResult)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@3e39e0fb]">&lt;&lt;attachScreenshot</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-2@521022428</td>   <td></td> </tr>
-<tr bgcolor="7ebe67">  <td>25/06/02 10:41:07</td>   <td>1897</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.attachScreenshot(org.testng.ITestResult)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@3e39e0fb]">&lt;&lt;attachScreenshot</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-2@521022428</td>   <td></td> </tr>
-<tr bgcolor="7ebe67">  <td>25/06/02 10:41:07</td>   <td>1897</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.attachScreenshot(org.testng.ITestResult)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@3e39e0fb]">&lt;&lt;attachScreenshot</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-2@521022428</td>   <td></td> </tr>
-<tr bgcolor="7ebe67">  <td>25/06/02 10:43:55</td>   <td>170298</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.attachScreenshot(org.testng.ITestResult)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@6f106af8]">&lt;&lt;attachScreenshot</td> 
-<td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="7ebe67">  <td>25/06/02 10:43:55</td>   <td>170298</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.attachScreenshot(org.testng.ITestResult)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@6f106af8]">&lt;&lt;attachScreenshot</td> 
-<td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="7ebe67">  <td>25/06/02 10:43:55</td>   <td>170298</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.attachScreenshot(org.testng.ITestResult)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@6f106af8]">&lt;&lt;attachScreenshot</td> 
-<td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="7ebe67">  <td>25/06/02 10:43:55</td>   <td>170298</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.attachScreenshot(org.testng.ITestResult)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@6f106af8]">&lt;&lt;attachScreenshot</td> 
-<td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="9cef95">  <td>25/06/02 10:41:01</td>   <td>-3452</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.doLoginTest()[pri:32767, instance:com.qa.opencart.tests.LoginPageTest@678586f0]">doLoginTest</td> 
-  <td>TestNG-tests-1@1593727781</td>   <td></td> </tr>
-<tr bgcolor="9cef95">  <td>25/06/02 10:41:04</td>   <td>-1080</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.doLoginTest()[pri:32767, instance:com.qa.opencart.tests.LoginPageTest@3e39e0fb]">doLoginTest</td> 
-  <td>TestNG-tests-2@521022428</td>   <td></td> </tr>
-<tr bgcolor="9cef95">  <td>25/06/02 10:43:55</td>   <td>170282</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.doLoginTest()[pri:32767, instance:com.qa.opencart.tests.LoginPageTest@6f106af8]">doLoginTest</td> 
-  <td>TestNG-tests-3@1151942538</td>   <td></td> </tr>
-<tr bgcolor="9cef95">  <td>25/06/02 10:41:00</td>   <td>-4462</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.forgotPasswordLinkExistTest()[pri:0, instance:com.qa.opencart.tests.LoginPageTest@678586f0]">forgotPasswordLinkExistTest</td> 
-  <td>TestNG-tests-1@1593727781</td>   <td></td> </tr>
-<tr bgcolor="9cef95">  <td>25/06/02 10:41:03</td>   <td>-1977</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.forgotPasswordLinkExistTest()[pri:0, instance:com.qa.opencart.tests.LoginPageTest@3e39e0fb]">forgotPasswordLinkExistTest</td> 
-  <td>TestNG-tests-2@521022428</td>   <td></td> </tr>
-<tr bgcolor="9cef95">  <td>25/06/02 10:43:55</td>   <td>170256</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.forgotPasswordLinkExistTest()[pri:0, instance:com.qa.opencart.tests.LoginPageTest@6f106af8]">forgotPasswordLinkExistTest</td> 
-  <td>TestNG-tests-3@1151942538</td>   <td></td> </tr>
-<tr bgcolor="9cef95">  <td>25/06/02 10:41:01</td>   <td>-3558</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageTitleTest()[pri:0, instance:com.qa.opencart.tests.LoginPageTest@678586f0]">loginPageTitleTest</td> 
-  <td>TestNG-tests-1@1593727781</td>   <td></td> </tr>
-<tr bgcolor="9cef95">  <td>25/06/02 10:41:04</td>   <td>-1146</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageTitleTest()[pri:0, instance:com.qa.opencart.tests.LoginPageTest@3e39e0fb]">loginPageTitleTest</td> 
-  <td>TestNG-tests-2@521022428</td>   <td></td> </tr>
-<tr bgcolor="9cef95">  <td>25/06/02 10:43:55</td>   <td>170266</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageTitleTest()[pri:0, instance:com.qa.opencart.tests.LoginPageTest@6f106af8]">loginPageTitleTest</td> 
-  <td>TestNG-tests-3@1151942538</td>   <td></td> </tr>
-<tr bgcolor="9cef95">  <td>25/06/02 10:41:01</td>   <td>-3499</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageURLTest()[pri:0, instance:com.qa.opencart.tests.LoginPageTest@678586f0]">loginPageURLTest</td> 
-  <td>TestNG-tests-1@1593727781</td>   <td></td> </tr>
-<tr bgcolor="9cef95">  <td>25/06/02 10:41:04</td>   <td>-1111</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageURLTest()[pri:0, instance:com.qa.opencart.tests.LoginPageTest@3e39e0fb]">loginPageURLTest</td> 
-  <td>TestNG-tests-2@521022428</td>   <td></td> </tr>
-<tr bgcolor="9cef95">  <td>25/06/02 10:43:55</td>   <td>170266</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageURLTest()[pri:0, instance:com.qa.opencart.tests.LoginPageTest@6f106af8]">loginPageURLTest</td> 
-  <td>TestNG-tests-3@1151942538</td>   <td></td> </tr>
-<tr bgcolor="7ebe67">  <td>25/06/02 10:40:54</td>   <td>-10440</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup(java.lang.String)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@678586f0]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1593727781</td>   <td></td> </tr>
-<tr bgcolor="7ebe67">  <td>25/06/02 10:40:54</td>   <td>-10440</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup(java.lang.String)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@3e39e0fb]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@521022428</td>   <td></td> </tr>
-<tr bgcolor="7ebe67">  <td>25/06/02 10:40:54</td>   <td>-10440</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup(java.lang.String)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@6f106af8]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-3@1151942538</td>   <td></td> </tr>
-<tr bgcolor="7ebe67">  <td>25/06/02 10:41:05</td>   <td>4</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.qa.opencart.tests.LoginPageTest@678586f0]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1593727781</td>   <td></td> </tr>
-<tr bgcolor="7ebe67">  <td>25/06/02 10:41:07</td>   <td>1900</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.qa.opencart.tests.LoginPageTest@3e39e0fb]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@521022428</td>   <td></td> </tr>
-<tr bgcolor="7ebe67">  <td>25/06/02 10:43:55</td>   <td>170299</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.qa.opencart.tests.LoginPageTest@6f106af8]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="c47b77">  <td>25/06/02 22:53:06</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.attachScreenshot(org.testng.ITestResult)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@60816371]">&lt;&lt;attachScreenshot</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@1491084121</td>   <td></td> </tr>
+<tr bgcolor="c47b77">  <td>25/06/02 22:53:06</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.attachScreenshot(org.testng.ITestResult)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@60816371]">&lt;&lt;attachScreenshot</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@1491084121</td>   <td></td> </tr>
+<tr bgcolor="c47b77">  <td>25/06/02 22:53:06</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.attachScreenshot(org.testng.ITestResult)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@60816371]">&lt;&lt;attachScreenshot</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@1491084121</td>   <td></td> </tr>
+<tr bgcolor="c47b77">  <td>25/06/02 22:53:06</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.attachScreenshot(org.testng.ITestResult)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@60816371]">&lt;&lt;attachScreenshot</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@1491084121</td>   <td></td> </tr>
+<tr bgcolor="c47b77">  <td>25/06/02 22:53:11</td>   <td>4434</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.attachScreenshot(org.testng.ITestResult)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@6ce2e079]">&lt;&lt;attachScreenshot</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-2@1226347512</td>   <td></td> </tr>
+<tr bgcolor="c47b77">  <td>25/06/02 22:53:11</td>   <td>4434</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.attachScreenshot(org.testng.ITestResult)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@6ce2e079]">&lt;&lt;attachScreenshot</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-2@1226347512</td>   <td></td> </tr>
+<tr bgcolor="c47b77">  <td>25/06/02 22:53:11</td>   <td>4434</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.attachScreenshot(org.testng.ITestResult)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@6ce2e079]">&lt;&lt;attachScreenshot</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-2@1226347512</td>   <td></td> </tr>
+<tr bgcolor="c47b77">  <td>25/06/02 22:53:11</td>   <td>4434</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.attachScreenshot(org.testng.ITestResult)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@6ce2e079]">&lt;&lt;attachScreenshot</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-2@1226347512</td>   <td></td> </tr>
+<tr bgcolor="a67293">  <td>25/06/02 22:53:02</td>   <td>-3903</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.doLoginTest()[pri:32767, instance:com.qa.opencart.tests.LoginPageTest@60816371]">doLoginTest</td> 
+  <td>TestNG-tests-1@1491084121</td>   <td></td> </tr>
+<tr bgcolor="a67293">  <td>25/06/02 22:53:07</td>   <td>1342</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.doLoginTest()[pri:32767, instance:com.qa.opencart.tests.LoginPageTest@6ce2e079]">doLoginTest</td> 
+  <td>TestNG-tests-2@1226347512</td>   <td></td> </tr>
+<tr bgcolor="a67293">  <td>25/06/02 22:53:00</td>   <td>-5744</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.forgotPasswordLinkExistTest()[pri:0, instance:com.qa.opencart.tests.LoginPageTest@60816371]">forgotPasswordLinkExistTest</td> 
+  <td>TestNG-tests-1@1491084121</td>   <td></td> </tr>
+<tr bgcolor="a67293">  <td>25/06/02 22:53:06</td>   <td>87</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.forgotPasswordLinkExistTest()[pri:0, instance:com.qa.opencart.tests.LoginPageTest@6ce2e079]">forgotPasswordLinkExistTest</td> 
+  <td>TestNG-tests-2@1226347512</td>   <td></td> </tr>
+<tr bgcolor="a67293">  <td>25/06/02 22:53:02</td>   <td>-4095</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageTitleTest()[pri:0, instance:com.qa.opencart.tests.LoginPageTest@60816371]">loginPageTitleTest</td> 
+  <td>TestNG-tests-1@1491084121</td>   <td></td> </tr>
+<tr bgcolor="a67293">  <td>25/06/02 22:53:07</td>   <td>1251</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageTitleTest()[pri:0, instance:com.qa.opencart.tests.LoginPageTest@6ce2e079]">loginPageTitleTest</td> 
+  <td>TestNG-tests-2@1226347512</td>   <td></td> </tr>
+<tr bgcolor="a67293">  <td>25/06/02 22:53:02</td>   <td>-3978</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageURLTest()[pri:0, instance:com.qa.opencart.tests.LoginPageTest@60816371]">loginPageURLTest</td> 
+  <td>TestNG-tests-1@1491084121</td>   <td></td> </tr>
+<tr bgcolor="a67293">  <td>25/06/02 22:53:07</td>   <td>1297</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageURLTest()[pri:0, instance:com.qa.opencart.tests.LoginPageTest@6ce2e079]">loginPageURLTest</td> 
+  <td>TestNG-tests-2@1226347512</td>   <td></td> </tr>
+<tr bgcolor="c47b77">  <td>25/06/02 22:52:54</td>   <td>-12480</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup(java.lang.String)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@60816371]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1491084121</td>   <td></td> </tr>
+<tr bgcolor="c47b77">  <td>25/06/02 22:52:54</td>   <td>-12480</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup(java.lang.String)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@6ce2e079]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@1226347512</td>   <td></td> </tr>
+<tr bgcolor="c47b77">  <td>25/06/02 22:53:06</td>   <td>16</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.qa.opencart.tests.LoginPageTest@60816371]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1491084121</td>   <td></td> </tr>
+<tr bgcolor="c47b77">  <td>25/06/02 22:53:11</td>   <td>4441</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.qa.opencart.tests.LoginPageTest@6ce2e079]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@1226347512</td>   <td></td> </tr>
 </table>
